// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given aliases should work 1`] = `
Object {
  "cacheDirectory": ".jest-cache",
  "collectCoverageFrom": Array [
    "<rootDir>/src/**/*.{js,jsx,ts,tsx,json}",
    "!**/node_modules/**",
    "!src/__integration-tests__/**",
    "!src/**/__tests__/**",
    "!<rootDir>/src/**/*.d.ts",
    "!<rootDir>/src/**/*.json",
  ],
  "coverageDirectory": "coverage-unit",
  "coverageReporters": Array [
    "json",
    "lcov",
    "text",
  ],
  "globals": Object {
    "INTEGRATION_TEST": false,
  },
  "moduleFileExtensions": Array [
    "js",
    "jsx",
    "ts",
    "tsx",
    "json",
  ],
  "moduleNameMapper": Object {
    "^@shared$": "<rootDir>/src/shared",
    "^@shared/(.*)$": "<rootDir>/src/shared/$1",
  },
  "modulePathIgnorePatterns": Array [
    "/lib/",
  ],
  "setupFiles": Array [],
  "testEnvironment": "node",
  "testMatch": Array [
    "<rootDir>/src/**/__tests__/**/*.test.{js,jsx,ts,tsx,json}",
  ],
  "testPathIgnorePatterns": Array [
    "/node_modules/",
    "/lib/",
  ],
  "transformIgnorePatterns": Array [
    "node_modules",
    "/lib/",
    ".*\\\\.json",
    ".*\\\\.d\\\\.ts",
  ],
}
`;

exports[`given integration tests should work 1`] = `
Object {
  "cacheDirectory": ".jest-cache",
  "collectCoverageFrom": Array [
    "<rootDir>/src/**/*.{js,jsx,ts,tsx,json}",
    "!**/node_modules/**",
    "!src/__integration-tests__/**",
    "!src/**/__tests__/**",
    "!<rootDir>/src/**/*.d.ts",
    "!<rootDir>/src/**/*.json",
  ],
  "coverageDirectory": "coverage-integration",
  "coverageReporters": Array [
    "json",
    "lcov",
    "text",
  ],
  "globals": Object {
    "INTEGRATION_TEST": false,
  },
  "moduleFileExtensions": Array [
    "js",
    "jsx",
    "ts",
    "tsx",
    "json",
  ],
  "moduleNameMapper": Object {
    "^ts-deps$": "<rootDir>/./src",
    "^ts-deps/(.*)$": "<rootDir>/./src/$1",
  },
  "modulePathIgnorePatterns": Array [
    "/lib/",
  ],
  "setupFiles": Array [],
  "testEnvironment": "node",
  "testMatch": Array [
    "<rootDir>/src/__integration-tests__/**/*.test.{js,jsx,ts,tsx,json}",
  ],
  "testPathIgnorePatterns": Array [
    "/node_modules/",
    "/lib/",
  ],
  "transformIgnorePatterns": Array [
    "node_modules",
    "/lib/",
    ".*\\\\.json",
    ".*\\\\.d\\\\.ts",
  ],
}
`;

exports[`given no options should work 1`] = `
Object {
  "cacheDirectory": ".jest-cache",
  "collectCoverageFrom": Array [
    "<rootDir>/src/**/*.{js,jsx,ts,tsx,json}",
    "!**/node_modules/**",
    "!src/__integration-tests__/**",
    "!src/**/__tests__/**",
    "!<rootDir>/src/**/*.d.ts",
    "!<rootDir>/src/**/*.json",
  ],
  "coverageDirectory": "coverage-unit",
  "coverageReporters": Array [
    "json",
    "lcov",
    "text",
  ],
  "globals": Object {
    "INTEGRATION_TEST": false,
  },
  "moduleFileExtensions": Array [
    "js",
    "jsx",
    "ts",
    "tsx",
    "json",
  ],
  "moduleNameMapper": Object {
    "^ts-deps$": "<rootDir>/./src",
    "^ts-deps/(.*)$": "<rootDir>/./src/$1",
  },
  "modulePathIgnorePatterns": Array [
    "/lib/",
  ],
  "setupFiles": Array [],
  "testEnvironment": "node",
  "testMatch": Array [
    "<rootDir>/src/**/__tests__/**/*.test.{js,jsx,ts,tsx,json}",
  ],
  "testPathIgnorePatterns": Array [
    "/node_modules/",
    "/lib/",
  ],
  "transformIgnorePatterns": Array [
    "node_modules",
    "/lib/",
    ".*\\\\.json",
    ".*\\\\.d\\\\.ts",
  ],
}
`;
